ember-bdi/tests/macros/compile-fail/from_term_transparent_multi_field.rs
extern crate alloc;
use ember::agent::bdi::term::FromTerm;

#[derive(FromTerm)]
#[ember(transparent)]
struct Multi(f32, f32);

fn main() {}
