ember-bdi/tests/macros/compile-fail/from_term_transparent_multi_field.stderr
error: #[ember(transparent)] is only supported on single-element tuple structs
 --> tests/macros/compile-fail/from_term_transparent_multi_field.rs:6:8
  |
6 | struct Multi(f32, f32);
  |        ^^^^^
